k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-list
  labels:
    app.kubernetes.io/part-of: shopping-list-server
